apps/base/redirects/minio/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.6.2
    ports:
      - port: 9002
        protocol: TCP
