apps/base/redirects/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/custom-http-errors: "400,401,403,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505"
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/authz/auth-request'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.christensencloud.us?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    nginx.ingress.kubernetes.io/proxy-body-size: 64m # raised because I couldn't upload some files via the web ui
  name: minio
  namespace: redirects
spec:
  ingressClassName: nginx-private
  rules:
    - host: minio.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9002
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - minio.christensencloud.us
      secretName: minio-christensencloud.us-tls
